--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav>
     <a href="#about">About</a>
-    <a href="#research">Research</a>
+    <a href="research.html">Research</a>
     <a href="#team">Team</a>
     <a href="#publications">Publications</a>
     <a href="#contact">Contact</a>
