--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Centre for Advanced Research</title>
+  <title>Centre for Environmental Intelligence</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Centre for Advanced Research</h1>
-    <p>Innovating for a better tomorrow</p>
+    <h1>Centre for Environmental Intelligence</h1>
+    <p>Responsible AI for a greener future</p>
   </header>
 
   <nav>
-    <a href="#about">About</a>
-    <a href="research.html">Research</a>
-    <a href="#team">Team</a>
-    <a href="#publications">Publications</a>
+    <a href="#about">About EI</a>
+    <a href="#focusareas">Focus Areas</a>
+    <a href="#team">People</a>
+    <a href="#projects">Projects</a>
+    <a href="#partners">Partners</a>
+    <a href="#EI Network">EI Network</a>
+    <a href="#doctoral">Doctoral Programme</a>
+    <a href="#education">Education</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <section id="about">
-    <h2>About Us</h2>
-    <p>The Centre for Advanced Research focuses on interdisciplinary innovation in science and technology.</p>
+    <h2>About EI</h2>
+    <p>The Centre for Environmental Intelligence (CEI) is an interdisciplinary research cluster focused on the responsible use of AI and data science to solve problems around environment and sustainability. Environmental Intelligence is a guiding concept that intersects environment, AI & data science, and responsible innovation. The CEI combines research projects, a doctoral programme, postgraduate education and community-building activities. A big part of our research approach is engagement with external partners who help us ensure our research has impact. </p>
   </section>
 
   <section id="research">
@@ -50,7 +54,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Centre for Advanced Research</p>
+    <p>&copy; 2025 Centre for Environmental Intelligence</p>
   </footer>
 </body>
 </html>
