--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav>
     <a href="#about">About EI</a>
     <a href="#focusareas">Focus Areas</a>
-    <a href="#team">People</a>
+    <a href="#people">People</a>
     <a href="#projects">Projects</a>
     <a href="#partners">Partners</a>
     <a href="#EI Network">EI Network</a>
@@ -26,21 +26,29 @@
 
   <section id="about">
     <h2>About EI</h2>
-    <p>The Centre for Environmental Intelligence (CEI) is an interdisciplinary research cluster focused on the responsible use of AI and data science to solve problems around environment and sustainability. Environmental Intelligence is a guiding concept that intersects environment, AI & data science, and responsible innovation. The CEI combines research projects, a doctoral programme, postgraduate education and community-building activities. A big part of our research approach is engagement with external partners who help us ensure our research has impact. </p>
+    <p>Environmental Intelligence is an interdisciplinary research concept focused on the responsible use of AI and data science to solve problems around environment and sustainability. The Centre for Environmental Intelligence is a research community at University of Exeter that brings together academics, students and practitioners around the study of EI, combining research projects, a doctoral programme, postgraduate education and community-building activities. A big part of the CEI research approach is engagement with external partners, who help ensure our research has impact. </p>
   </section>
 
-  <section id="research">
-    <h2>Research Areas</h2>
+  <section id="focusareas">
+    <h2>Focus Areas</h2>
     <ul>
-      <li>Artificial Intelligence</li>
-      <li>Biotechnology</li>
-      <li>Clean Energy</li>
+      <li>Focus 1 TBC</li>
+      <li>Focus 2 TBC</li>
+      <li>Focus 3 TBC</li>
     </ul>
   </section>
 
-  <section id="team">
-    <h2>Our Team</h2>
-    <p>Meet our passionate researchers and staff.</p>
+  <section id="people">
+    <h2>People</h2>
+    <p>The CEI has many members...</p>
+    <ul>
+      <li>CEI Management Team: ...</li>
+      <li>CEI Science Fellows...</li>
+      <ul>
+        <li>Sareh Rowlands, Chunbo Luo, Jawad Fayaz, Rudy Arthur, Milto Miltiadou, Steven Palmer, Katie Ledingham, Frank van Veen, Sarah Hartley, James Dyke, Benno Simmons, Tarje Nissen-Meyer, ...</li>
+      </ul>
+      <li>CEI Network: LINK TO NETWORK DIRECTORY]</li>
+    </ul>
   </section>
 
   <section id="publications">
